# hselib-vmcu-middleware

./: .gdbinit.template  CMakeLists.txt  INTEGRATION_GUIDE.md  README.md  arm-none-eabi-linux.cmake  arm-none-eabi.cmake  build_hselib.sh
LpuartFlexio_Uart_Ip_Example_S32K344/: .cproject  .cproject.bak  .default_mex  .project  ClockYaml.txt  LpuartFlexio_Uart_Ip_Example.mex  description.txt
LpuartFlexio_Uart_Ip_Example_S32K344/Debug_FLASH/: LpuartFlexio_Uart_Ip_Example_S32K344.args  LpuartFlexio_Uart_Ip_Example_S32K344.elf  LpuartFlexio_Uart_Ip_Example_S32K344.map  makefile  objects.mk
LpuartFlexio_Uart_Ip_Example_S32K344/Debug_FLASH/Project_Settings/Startup_Code/: Vector_Table.args  exceptions.d  nvic.d  startup.d  system.d
LpuartFlexio_Uart_Ip_Example_S32K344/Debug_FLASH/RTD/src/: Clock_Ip.d  Clock_Ip_Data.d  Clock_Ip_Divider.d  Clock_Ip_DividerTrigger.d  Clock_Ip_ExtOsc.d  Clock_Ip_FracDiv.d  Clock_Ip_Frequency.d  Clock_Ip_Gate.d  Clock_Ip_IntOsc.d  Clock_Ip_Irq.d  Clock_Ip_Monitor.d  Clock_Ip_Pll.d  Clock_Ip_ProgFreqSwitch.d  Clock_Ip_Selector.d  Clock_Ip_Specific.d  Det.d  Det_stub.d  Flexio_Mcl_Ip.d  Flexio_Mcl_Ip_HwAccess.d  Flexio_Mcl_Ip_Irq.d  Flexio_Uart_Ip.d  Flexio_Uart_Ip_Irq.d  IntCtrl_Ip.d  Lpuart_Uart_Ip.d  Lpuart_Uart_Ip_Irq.d  OsIf_Interrupts.d  OsIf_Software_Semaphore.d  OsIf_Timer.d  OsIf_Timer_System.d  OsIf_Timer_System_Internal_Systick.d  SchM_BaseNXP.d  SchM_Mcl.d  SchM_Mcu.d  SchM_Port.d  SchM_Uart.d  Siul2_Port_Ip.d  Tspc_Port_Ip.d  subdir.mk
LpuartFlexio_Uart_Ip_Example_S32K344/Debug_FLASH/board/: Siul2_Port_Ip_Cfg.d  Tspc_Port_Ip_Cfg.d
LpuartFlexio_Uart_Ip_Example_S32K344/Debug_FLASH/generate/src/: Clock_Ip_Cfg.d  Flexio_Mcl_Ip_Sa_VS_0_PBcfg.d  Flexio_Uart_Ip_Sa_VS_0_PBcfg.d  IntCtrl_Ip_Cfg.d  Lpuart_Uart_Ip_Sa_VS_0_PBcfg.d  OsIf_Cfg.d  subdir.mk
LpuartFlexio_Uart_Ip_Example_S32K344/Debug_FLASH/src/: main.args  main.d
LpuartFlexio_Uart_Ip_Example_S32K344/Project_Settings/Debugger/: LpuartFlexio_Uart_Ip_Example_S32K344_Debug_FLASH_PNE.launch
LpuartFlexio_Uart_Ip_Example_S32K344/Project_Settings/Linker_Files/: linker_flash_s32k344.ld
LpuartFlexio_Uart_Ip_Example_S32K344/Project_Settings/Startup_Code/: Vector_Table.s  exceptions.c  nvic.c  startup.c  startup_cm7.s  system.c
LpuartFlexio_Uart_Ip_Example_S32K344/RTD/include/: Det_stub.h  Flexio_Mcl_Ip.h  Flexio_Mcl_Ip_HwAccess.h  Flexio_Mcl_Ip_Types.h  Flexio_Uart_Ip.h  Flexio_Uart_Ip_HwAccess.h  Flexio_Uart_Ip_Irq.h  Flexio_Uart_Ip_Types.h  IntCtrl_Ip.h  IntCtrl_Ip_TypesDef.h  Lpuart_Uart_Ip_Types.h  SchM_BaseNXP.h  SchM_Mcl.h  SchM_Mcu.h  SchM_Port.h  SchM_Uart.h
LpuartFlexio_Uart_Ip_Example_S32K344/RTD/src/: Det_stub.c  Flexio_Mcl_Ip.c  Flexio_Mcl_Ip_HwAccess.c  Flexio_Mcl_Ip_Irq.c  Flexio_Uart_Ip.c  Flexio_Uart_Ip_Irq.c  IntCtrl_Ip.c  SchM_BaseNXP.c  SchM_Mcl.c  SchM_Mcu.c  SchM_Port.c  SchM_Uart.c
LpuartFlexio_Uart_Ip_Example_S32K344/board/: Siul2_Port_Ip_Cfg.c  Siul2_Port_Ip_Cfg.h  Tspc_Port_Ip_Cfg.c  Tspc_Port_Ip_Cfg.h
LpuartFlexio_Uart_Ip_Example_S32K344/generate/include/: Clock_Ip_Cfg.h  Clock_Ip_Cfg_Defines.h  DeviceDefinition.h  Flexio_Mcl_Ip_Cfg.h  Flexio_Mcl_Ip_Cfg_Defines.h  Flexio_Mcl_Ip_Cfg_DeviceRegisters.h  Flexio_Mcl_Ip_Sa_VS_0_PBcfg.h  Flexio_Uart_Ip_Cfg.h  Flexio_Uart_Ip_CfgDefines.h  Flexio_Uart_Ip_Defines.h  Flexio_Uart_Ip_Sa_VS_0_PBcfg.h  IntCtrl_Ip_Cfg.h  IntCtrl_Ip_CfgDefines.h  Lpuart_Uart_Ip_Cfg.h  Lpuart_Uart_Ip_Defines.h  Lpuart_Uart_Ip_Sa_VS_0_PBcfg.h  OsIf_ArchCfg.h  OsIf_Cfg.h  Siul2_Port_Ip_Defines.h  Soc_Ips.h  modules.h
LpuartFlexio_Uart_Ip_Example_S32K344/generate/src/: Clock_Ip_Cfg.c  Flexio_Mcl_Ip_Sa_VS_0_PBcfg.c  Flexio_Uart_Ip_Sa_VS_0_PBcfg.c  IntCtrl_Ip_Cfg.c  Lpuart_Uart_Ip_Sa_VS_0_PBcfg.c  OsIf_Cfg.c
LpuartFlexio_Uart_Ip_Example_S32K344/include/: check_example.h
LpuartFlexio_Uart_Ip_Example_S32K344/src/: main.c
cmake/: MergeRustArchive.cmake
include/: communication_middleware.h  hse_ARMCM7.h  hse_ARMCM7_DP.h  hse_ARMCM7_SP.h  hse_Compiler.h  hse_CompilerDefinition.h  hse_Compiler_Cfg.h  hse_Mcal.h  hse_Platform_Types.h  hse_S32K344.h  hse_S32K344_ADC.h  hse_S32K344_AXBS_LITE.h  hse_S32K344_BCTU.h  hse_S32K344_CMU_FC.h  hse_S32K344_CMU_FM.h  hse_S32K344_CONFIGURATION_GPR.h  hse_S32K344_CRC.h  hse_S32K344_DCM.h  hse_S32K344_DCM_GPR.h  hse_S32K344_DMAMUX.h  hse_S32K344_DMA_TCD.h  hse_S32K344_EDMA.h  hse_S32K344_EIM.h  hse_S32K344_EMAC.h  hse_S32K344_EMIOS.h  hse_S32K344_ERM.h  hse_S32K344_FCCU.h  hse_S32K344_FIRC.h  hse_S32K344_FLASH.h  hse_S32K344_FLEXCAN.h  hse_S32K344_FLEXIO.h  hse_S32K344_FXOSC.h  hse_S32K344_INTM.h  hse_S32K344_JDC.h  hse_S32K344_LCU.h  hse_S32K344_LPCMP.h  hse_S32K344_LPI2C.h  hse_S32K344_LPSPI.h  hse_S32K344_LPUART.h  hse_S32K344_MCM_CM7.h  (+78 more)
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/src/: communication_middleware.rs  ffi.rs  hse.rs  lib.rs
src/: BlankCheck.c  ClearAllErrorFlags.c  ClearLock.c  FlashErase.c  FlashInit.c  FlashProgram.c  GetBaseAddressOfSector.c  GetLock.c  ProgramVerify.c  SetLock.c  flash.c  host_stm.c  hse_b_catalog_formatting.c  hse_config.c  hse_crypto.c  hse_demo_app_config.c  hse_global_variables.c  hse_host.c  hse_host_boot.c  hse_host_flash.c  hse_host_format_key_catalogs.c  hse_irq_integration.c  hse_lib_stubs.c  hse_monotonic_cnt.c  hse_secure_boot.c  hse_she_command_main.c  hse_sys_init.c  hse_utest.c  nvic.c  pflash.c
test/src/: hse_library_example.c
